<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".tab2">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:src="@drawable/brain"
            android:scaleType="fitXY"
            android:contentDescription="@string/brain"/>

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="top|center"
            android:src="@drawable/odiba"
            android:layout_marginTop="170dp"/>
    <TextView
            android:text="@string/hafidh_nur_anafi"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/textView"
            android:textSize="36sp"
            android:textColor="@android:color/black" />
    <ImageView
            android:src="@android:drawable/alert_dark_frame"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="335dp"
            android:scaleX="2"
            android:scaleY="1"
            android:id="@+id/imageView4" android:contentDescription="@string/black"/>
    <ImageView
            android:src="@drawable/company"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginTop="410dp"
            android:id="@+id/imageView"
            android:contentDescription="@string/company"/>
    <ImageView
            android:src="@drawable/idea"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="start"
            android:layout_marginTop="490dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imageView3"
            android:contentDescription="@string/idea"
            android:layout_marginStart="20dp"/>
    <TextView
            android:text="@string/universitas_pgri_semarang"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="160dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:id="@+id/textView2"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"/>
    <TextView
            android:text="@string/informatika"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="240dp"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:id="@+id/textView3"
            android:layout_marginStart="60dp"
            android:layout_marginLeft="60dp"/>



</FrameLayout>