<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".tab4">

<TextView
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="85dp"
        android:layout_marginStart="85dp"
        android:text="@string/apainfo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"
        android:textAlignment="center"
        />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="60dp"
            android:text="@string/apainfo1"
            android:textSize="15sp"
            android:textColor="@android:color/black"
    />

    <TextView
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:text="@string/kenapainfo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            android:textAlignment="center"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="350dp"
            android:text="@string/kenapainfo1"
            android:textSize="15sp"
            android:textColor="@android:color/black"
    />



</FrameLayout>